test/compile_error/lengthmismatch.conf.2.def
config length_mismatch_conf {
    optional vector_val : list[0]<int> = { 3, 4 };
}
